refactor: show available locales in locale command